# mut_var

./: LICENSE.txt  README.md  pyproject.toml
src/mut_var/: __about__.py  __init__.py  cli.py  fit.curve.new.py
tests/: __init__.py
