[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mut-var"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nicholas Mancuso", email = "nmancuso@usc.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Nicholas Mancuso/mut-var#readme"
Issues = "https://github.com/Nicholas Mancuso/mut-var/issues"
Source = "https://github.com/Nicholas Mancuso/mut-var"

[tool.hatch.version]
path = "src/mut_var/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mut_var tests}"

[tool.coverage.run]
source_pkgs = ["mut_var", "tests"]
branch = true
parallel = true
omit = [
  "src/mut_var/__about__.py",
]

[tool.coverage.paths]
mut_var = ["src/mut_var", "*/mut-var/src/mut_var"]
tests = ["tests", "*/mut-var/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
